--- a/build.xml
+++ b/build.xml
@@ -21,11 +21,9 @@
     <exclude name="**/*.rbc/**"/>
     <exclude name="**/*~/**"/>
     <exclude name="**/.DS_Store/**"/>
-    <exclude name="**/.bundle/**"/>
     <exclude name="**/.git/**"/>
     <exclude name="**/.hg/**"/>
     <exclude name="**/.svn/**"/>
-    <exclude name="**/.tox/**"/>
     <exclude name="**/CVS/**"/>
     <exclude name="**/RCS/**"/>
     <exclude name="**/SCCS/**"/>
@@ -37,13 +35,13 @@
   </patternset>
   <patternset id="library.patterns">
     <include name="*.war"/>
-    <include name="*.ear"/>
+    <include name="*.swc"/>
     <include name="*.apk"/>
     <include name="*.zip"/>
-    <include name="*.swc"/>
-    <include name="*.ane"/>
     <include name="*.egg"/>
+    <include name="*.ane"/>
     <include name="*.jar"/>
+    <include name="*.ear"/>
   </patternset>
   <patternset id="compiler.resources">
     <exclude name="**/?*.java"/>
@@ -101,12 +99,8 @@
     <pathelement location="${idea.home}/lib/hamcrest-core-1.3.jar"/>
   </path>
   
-  <path id="library.junit-4.11.classpath">
-    <pathelement location="${idea.home}/lib/junit-4.11.jar"/>
-  </path>
-  
-  <path id="library.junit-4.111.classpath">
-    <pathelement location="${idea.home}/lib/junit-4.11.jar"/>
+  <path id="library.junit-4.12.classpath">
+    <pathelement location="${idea.home}/lib/junit-4.12.jar"/>
   </path>
   <!-- Register Custom Compiler Taskdefs -->
   <property name="javac2.home" value="${idea.home}/lib"/>
@@ -133,7 +127,7 @@
   <property name="module.jdk.bin.uniwork" value="${project.jdk.bin}"/>
   <property name="module.jdk.classpath.uniwork" value="${project.jdk.classpath}"/>
   
-  <property name="compiler.args.uniwork" value="-encoding UTF-8 -source 1.6 ${compiler.args}"/>
+  <property name="compiler.args.uniwork" value="-encoding UTF-8 -source 1.6 -target 1.6 ${compiler.args}"/>
   
   <property name="uniwork.output.dir" value="${module.uniwork.basedir}/out/production/Uniwork"/>
   <property name="uniwork.testoutput.dir" value="${module.uniwork.basedir}/out/test/Uniwork"/>
@@ -144,24 +138,28 @@
   
   <path id="uniwork.module.production.classpath">
     <path refid="${module.jdk.classpath.uniwork}"/>
-    <path refid="library.junit-4.11.classpath"/>
+    <path refid="library.hamcrest-core-1.3.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   <path id="uniwork.runtime.production.module.classpath">
     <pathelement location="${uniwork.output.dir}"/>
-    <path refid="library.junit-4.11.classpath"/>
+    <path refid="library.hamcrest-core-1.3.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   <path id="uniwork.module.classpath">
     <path refid="${module.jdk.classpath.uniwork}"/>
     <pathelement location="${uniwork.output.dir}"/>
-    <path refid="library.junit-4.11.classpath"/>
+    <path refid="library.hamcrest-core-1.3.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   <path id="uniwork.runtime.module.classpath">
     <pathelement location="${uniwork.testoutput.dir}"/>
     <pathelement location="${uniwork.output.dir}"/>
-    <path refid="library.junit-4.11.classpath"/>
+    <path refid="library.hamcrest-core-1.3.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   
@@ -217,7 +215,7 @@
   <property name="module.jdk.bin.uniplay" value="${project.jdk.bin}"/>
   <property name="module.jdk.classpath.uniplay" value="${project.jdk.classpath}"/>
   
-  <property name="compiler.args.uniplay" value="-encoding UTF-8 -source 1.6 ${compiler.args}"/>
+  <property name="compiler.args.uniplay" value="-encoding UTF-8 -source 1.6 -target 1.6 ${compiler.args}"/>
   
   <property name="uniplay.output.dir" value="${module.uniplay.basedir}/out/production/Uniplay"/>
   <property name="uniplay.testoutput.dir" value="${module.uniplay.basedir}/out/test/Uniplay"/>
@@ -229,17 +227,15 @@
   <path id="uniplay.module.production.classpath">
     <path refid="${module.jdk.classpath.uniplay}"/>
     <pathelement location="${uniwork.output.dir}"/>
-    <path refid="library.junit-4.11.classpath"/>
     <path refid="library.hamcrest-core-1.3.classpath"/>
-    <path refid="library.junit-4.111.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   <path id="uniplay.runtime.production.module.classpath">
     <path refid="uniwork.runtime.production.module.classpath"/>
     <pathelement location="${uniplay.output.dir}"/>
-    <path refid="library.junit-4.11.classpath"/>
     <path refid="library.hamcrest-core-1.3.classpath"/>
-    <path refid="library.junit-4.111.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   <path id="uniplay.module.classpath">
@@ -247,18 +243,16 @@
     <pathelement location="${uniwork.testoutput.dir}"/>
     <pathelement location="${uniwork.output.dir}"/>
     <pathelement location="${uniplay.output.dir}"/>
-    <path refid="library.junit-4.11.classpath"/>
     <path refid="library.hamcrest-core-1.3.classpath"/>
-    <path refid="library.junit-4.111.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   <path id="uniplay.runtime.module.classpath">
     <path refid="uniwork.runtime.module.classpath"/>
     <pathelement location="${uniplay.testoutput.dir}"/>
     <pathelement location="${uniplay.output.dir}"/>
-    <path refid="library.junit-4.11.classpath"/>
     <path refid="library.hamcrest-core-1.3.classpath"/>
-    <path refid="library.junit-4.111.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   
@@ -314,7 +308,7 @@
   <property name="module.jdk.bin.asteroids" value="${project.jdk.bin}"/>
   <property name="module.jdk.classpath.asteroids" value="${project.jdk.classpath}"/>
   
-  <property name="compiler.args.asteroids" value="-encoding UTF-8 -source 1.6 ${compiler.args}"/>
+  <property name="compiler.args.asteroids" value="-encoding UTF-8 -source 1.6 -target 1.6 ${compiler.args}"/>
   
   <property name="asteroids.output.dir" value="${module.asteroids.basedir}/out/production/Asteroids"/>
   <property name="asteroids.testoutput.dir" value="${module.asteroids.basedir}/out/test/Asteroids"/>
@@ -328,6 +322,7 @@
     <pathelement location="${uniplay.output.dir}"/>
     <pathelement location="${uniwork.output.dir}"/>
     <path refid="library.hamcrest-core-1.3.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   <path id="asteroids.runtime.production.module.classpath">
@@ -335,6 +330,7 @@
     <path refid="uniplay.runtime.production.module.classpath"/>
     <path refid="uniwork.runtime.production.module.classpath"/>
     <path refid="library.hamcrest-core-1.3.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   <path id="asteroids.module.classpath">
@@ -345,6 +341,7 @@
     <pathelement location="${uniwork.testoutput.dir}"/>
     <pathelement location="${uniwork.output.dir}"/>
     <path refid="library.hamcrest-core-1.3.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   <path id="asteroids.runtime.module.classpath">
@@ -353,6 +350,7 @@
     <path refid="uniplay.runtime.module.classpath"/>
     <path refid="uniwork.runtime.module.classpath"/>
     <path refid="library.hamcrest-core-1.3.classpath"/>
+    <path refid="library.junit-4.12.classpath"/>
   </path>
   
   
@@ -410,7 +408,7 @@
     <property name="artifacts.temp.dir" value="${basedir}/__artifacts_temp"/>
     <property name="artifact.output.asteroids" value="${basedir}/out/artifacts/Asteroids"/>
     <mkdir dir="${artifacts.temp.dir}"/>
-    <property name="artifact.temp.output.Uniwork" value="${artifacts.temp.dir}/Uniwork.jar"/>
+    <property name="artifact.temp.output.Asteroids" value="${artifacts.temp.dir}/Asteroids.jar"/>
     <taskdef resource="com/sun/javafx/tools/ant/antlib.xml" uri="javafx:com.sun.javafx.tools.ant" classpath="${jdk.home.1.7}/lib/ant-javafx.jar"/>
   </target>
   
@@ -420,43 +418,43 @@
   
   <target name="artifact.asteroids" depends="init.artifacts, compile.module.asteroids, compile.module.uniplay, compile.module.uniwork" description="Build &#39;Asteroids&#39; artifact" xmlns:fx="javafx:com.sun.javafx.tools.ant">
     <mkdir dir="${artifact.output.asteroids}"/>
-    <copy todir="${artifact.temp.output.Uniwork}">
+    <copy todir="${artifact.temp.output.Asteroids}">
       <fileset dir="${asteroids.output.dir}"/>
     </copy>
-    <mkdir dir="${artifact.temp.output.Uniwork}/resources"/>
-    <copy todir="${artifact.temp.output.Uniwork}/resources">
-      <fileset dir="${basedir}/resources"/>
-    </copy>
-    <copy todir="${artifact.temp.output.Uniwork}">
+    <copy todir="${artifact.temp.output.Asteroids}">
       <fileset dir="${uniplay.output.dir}"/>
     </copy>
-    <copy todir="${artifact.temp.output.Uniwork}">
+    <copy todir="${artifact.temp.output.Asteroids}">
       <fileset dir="${uniwork.output.dir}"/>
     </copy>
-    <fx:fileset id="all_but_Uniwork" dir="${artifact.temp.output.Uniwork}" includes="**/*.jar">
-      <exclude name="Uniwork.jar"/>
+    <mkdir dir="${artifact.temp.output.Asteroids}/resources"/>
+    <copy todir="${artifact.temp.output.Asteroids}/resources">
+      <fileset dir="${basedir}/resources"/>
+    </copy>
+    <fx:fileset id="all_but_Asteroids" dir="${artifact.temp.output.Asteroids}" includes="**/*.jar">
+      <exclude name="Asteroids.jar"/>
     </fx:fileset>
-    <fx:fileset id="all_Uniwork" dir="${artifact.temp.output.Uniwork}" includes="**/*.jar"/>
-    <fx:application id="Uniwork_id" name="Asteroids" mainClass="Asteroids.Main"/>
-    <fx:jar destfile="${artifact.temp.output.Uniwork}/Uniwork.jar">
-      <fx:application refid="Uniwork_id"/>
-      <fileset dir="${artifact.temp.output.Uniwork}" excludes="**/*.jar"/>
+    <fx:fileset id="all_Asteroids" dir="${artifact.temp.output.Asteroids}" includes="**/*.jar"/>
+    <fx:application id="Asteroids_id" name="Asteroids" mainClass="Asteroids.Main"/>
+    <fx:jar destfile="${artifact.temp.output.Asteroids}/Asteroids.jar">
+      <fx:application refid="Asteroids_id"/>
+      <fileset dir="${artifact.temp.output.Asteroids}" excludes="**/*.jar"/>
       <fx:resources>
-        <fx:fileset refid="all_but_Uniwork"/>
+        <fx:fileset refid="all_but_Asteroids"/>
       </fx:resources>
       <manifest/>
     </fx:jar>
-    <fx:deploy width="600" height="400" updatemode="background" outdir="${artifact.temp.output.Uniwork}/deploy" outfile="Uniwork">
-      <fx:application refid="Uniwork_id"/>
+    <fx:deploy width="600" height="400" updatemode="background" outdir="${artifact.temp.output.Asteroids}/deploy" outfile="Asteroids">
+      <fx:application refid="Asteroids_id"/>
       <fx:resources>
-        <fx:fileset refid="all_Uniwork"/>
+        <fx:fileset refid="all_Asteroids"/>
       </fx:resources>
     </fx:deploy>
     <copy todir="${artifact.output.asteroids}">
-      <fileset dir="${artifact.temp.output.Uniwork}/deploy"/>
+      <fileset dir="${artifact.temp.output.Asteroids}/deploy"/>
     </copy>
     <delete includeemptydirs="true">
-      <fileset dir="${artifact.temp.output.Uniwork}"/>
+      <fileset dir="${artifact.temp.output.Asteroids}"/>
     </delete>
   </target>
   
