--- a/build.xml
+++ b/build.xml
@@ -32,13 +32,14 @@
     <exclude name="**/vssver2.scc/**"/>
   </patternset>
   <patternset id="library.patterns">
-    <include name="*.egg"/>
-    <include name="*.jar"/>
-    <include name="*.ane"/>
-    <include name="*.ear"/>
-    <include name="*.swc"/>
     <include name="*.war"/>
+    <include name="*.swc"/>
     <include name="*.zip"/>
+    <include name="*.egg"/>
+    <include name="*.ane"/>
+    <include name="*.jar"/>
+    <include name="*.ear"/>
+    <include name="*.klib"/>
   </patternset>
   <patternset id="compiler.resources">
     <exclude name="**/?*.java"/>
@@ -108,10 +109,12 @@
   <!-- Register Custom Compiler Taskdefs -->
   <property name="javac2.home" value="${idea.home}/lib"/>
   <path id="javac2.classpath">
-    <pathelement location="${javac2.home}/javac2.jar"/>
-    <pathelement location="${javac2.home}/jdom.jar"/>
-    <pathelement location="${javac2.home}/asm-all.jar"/>
-    <pathelement location="${javac2.home}/jgoodies-forms.jar"/>
+    <fileset dir="${javac2.home}">
+      <include name="javac2.jar"/>
+      <include name="jdom.jar"/>
+      <include name="asm-all*.jar"/>
+      <include name="forms-*.jar"/>
+    </fileset>
   </path>
   <target name="register.custom.compilers">
     <taskdef name="javac2" classname="com.intellij.ant.Javac2" classpathref="javac2.classpath"/>
@@ -130,7 +133,7 @@
   <property name="module.jdk.bin.uniwork" value="${jdk.bin.1.8}"/>
   <property name="module.jdk.classpath.uniwork" value="jdk.classpath.1.8"/>
   
-  <property name="compiler.args.uniwork" value="-encoding UTF-8 -source 1.6 -target 1.6 ${compiler.args}"/>
+  <property name="compiler.args.uniwork" value="-encoding UTF-8 -source 6 -target 6 ${compiler.args}"/>
   
   <property name="uniwork.output.dir" value="${module.uniwork.basedir}/out/production/Uniwork"/>
   <property name="uniwork.testoutput.dir" value="${module.uniwork.basedir}/out/test/Uniwork"/>
@@ -142,31 +145,31 @@
   <path id="uniwork.module.production.classpath">
     <path refid="${module.jdk.classpath.uniwork}"/>
     <path refid="library.gson-2.5.classpath"/>
-    <path refid="library.hamcrest-core-1.3.classpath"/>
     <path refid="library.junit-4.12.classpath"/>
+    <path refid="library.hamcrest-core-1.3.classpath"/>
   </path>
   
   <path id="uniwork.runtime.production.module.classpath">
     <pathelement location="${uniwork.output.dir}"/>
     <path refid="library.gson-2.5.classpath"/>
-    <path refid="library.hamcrest-core-1.3.classpath"/>
     <path refid="library.junit-4.12.classpath"/>
+    <path refid="library.hamcrest-core-1.3.classpath"/>
   </path>
   
   <path id="uniwork.module.classpath">
     <path refid="${module.jdk.classpath.uniwork}"/>
     <pathelement location="${uniwork.output.dir}"/>
     <path refid="library.gson-2.5.classpath"/>
-    <path refid="library.hamcrest-core-1.3.classpath"/>
     <path refid="library.junit-4.12.classpath"/>
+    <path refid="library.hamcrest-core-1.3.classpath"/>
   </path>
   
   <path id="uniwork.runtime.module.classpath">
     <pathelement location="${uniwork.testoutput.dir}"/>
     <pathelement location="${uniwork.output.dir}"/>
     <path refid="library.gson-2.5.classpath"/>
-    <path refid="library.hamcrest-core-1.3.classpath"/>
     <path refid="library.junit-4.12.classpath"/>
+    <path refid="library.hamcrest-core-1.3.classpath"/>
   </path>
   
   
@@ -222,7 +225,7 @@
   <property name="module.jdk.bin.uniplay" value="${jdk.bin.1.8}"/>
   <property name="module.jdk.classpath.uniplay" value="jdk.classpath.1.8"/>
   
-  <property name="compiler.args.uniplay" value="-encoding UTF-8 -source 1.6 -target 1.6 ${compiler.args}"/>
+  <property name="compiler.args.uniplay" value="-encoding UTF-8 -source 6 -target 6 ${compiler.args}"/>
   
   <property name="uniplay.output.dir" value="${module.uniplay.basedir}/out/production/Uniplay"/>
   <property name="uniplay.testoutput.dir" value="${module.uniplay.basedir}/out/test/Uniplay"/>
@@ -311,7 +314,7 @@
   <property name="module.jdk.bin.asteroids" value="${project.jdk.bin}"/>
   <property name="module.jdk.classpath.asteroids" value="${project.jdk.classpath}"/>
   
-  <property name="compiler.args.asteroids" value="-encoding UTF-8 -source 1.6 -target 1.6 ${compiler.args}"/>
+  <property name="compiler.args.asteroids" value="-encoding UTF-8 -source 6 -target 6 ${compiler.args}"/>
   
   <property name="asteroids.output.dir" value="${module.asteroids.basedir}/out/production/Asteroids"/>
   <property name="asteroids.testoutput.dir" value="${module.asteroids.basedir}/out/test/Asteroids"/>
@@ -430,6 +433,8 @@
     <copy todir="${artifact.temp.output.Asteroids}/resources">
       <fileset dir="${basedir}/resources"/>
     </copy>
+    <mkdir dir="${artifact.temp.output.Asteroids}/libs"/>
+    <copy file="${basedir}/../libs/gson-2.5.jar" tofile="${artifact.temp.output.Asteroids}/libs/gson-2.5.jar"/>
     <fx:fileset id="all_but_Asteroids" dir="${artifact.temp.output.Asteroids}" includes="**/*.jar">
       <exclude name="Asteroids.jar"/>
     </fx:fileset>
